# BetaPool

./: .gitignore  CodeBaseIndex.md  LICENSE  README.md  Usage.md  pyproject.toml  requirements.txt
ACMART/: acmpaper.tex  sample-acns.bib  sample.tex
betapool/: README.md  __init__.py  executor.py  metrics.py  py.typed  workloads.py
betapool/tests/: __init__.py  test_betapool.py
docker/: Dockerfile  Dockerfile.quadCore  Dockerfile.singleCore  docker-compose.yml
docs/: paper.md  paper.tex  reproducibility.md
docs/MandalSchedulingAlgorithm/: MandalSchedulingAlgorithm.tex
experiments/: baselineComparison.py  benchmark_output.txt  benchmark_output_v2.txt  benchmark_output_v3.txt  betaThresholdWithCI.py  compare_gil_nogil.py  context_switch_benchmark.py  controllerTimeline.py  ctx_switch_results.json  edge_nogil_experiment.py  edge_results_gil_py311.json  generateConvergenceFigure.py  generateFigures.py  generateFiguresWithCI.py  generateFixedFigures.py  generateInstrumentationFigure.py  generateOsGilParadoxDiagram.py  gilNogilExperimentWithCI.py  instrumentationOverhead.py  ioBaselineWithCI.py  memoryOverheadWithCI.py  memory_pressure_results.json  memory_pressure_test.py  numpy_inference_benchmark.py  numpy_vision_workload.py  pytorch_edge_results_gil_py311.json  pytorch_edge_workload.py  quadCoreBenchmark.py  realistic_workload_results.csv  realistic_workload_suite.py  rerun_experiments_proper.py  rerun_tables_with_ci.py  rerun_with_ci.py  results_gil_311.json  results_gil_313.json  results_nogil_313.json  singleCoreBenchmark.py  tflite_workload.py  workloadSweep.py
experiments/results/: all_experiments_with_ci.json  table13_workload_generalization_with_ci.csv  table4_saturation_cliff_with_ci.csv  table7_solution_comparison_with_ci.csv
results/: baseline_comparison.csv  baseline_comparison_with_ci.csv  benchmark_results_wsl_py312.txt  beta_threshold_sensitivity.csv  beta_threshold_sensitivity_with_ci.csv  beta_threshold_sensitivity_with_ci.json  controller_timeline.csv  edge_results_nogil_py313.json  gilnogil_gil_py311_quadcore.json  gilnogil_gil_py311_singlecore.json  instrumentation_overhead.csv  io_baseline.csv  io_baseline_with_ci.csv  io_baseline_with_ci.json  memory_overhead_with_ci.csv  memory_overhead_with_ci.json  mixed_workload.csv  mixed_workload_with_ci.csv  quadcore_io_baseline.csv  quadcore_mixed_workload.csv  quadcore_mixed_workload_with_ci.csv  solution_comparison_v2.csv  summary.txt  veto_events.csv  workload_sweep.csv  workload_sweep_with_ci.csv
src/: __init__.py  adaptiveExecutor.py  gilSaturation.py  metrics.py  ragServer.py  visualization.py  workloadSwitching.py  workloads.py
tests/: testAdaptiveExecutor.py
