[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "betapool"
version = "1.0.0"
description = "Adaptive Thread Pool for GIL-Aware Concurrency Control in Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Mridankan Mandal", email = "mridankan.mandal@example.com"}
]
maintainers = [
    {name = "Mridankan Mandal", email = "mridankan.mandal@example.com"}
]
keywords = [
    "concurrency",
    "threading",
    "thread-pool",
    "gil",
    "python",
    "edge-computing",
    "adaptive",
    "scheduling",
    "performance",
    "optimization",
    "blocking-ratio",
    "beta-metric"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Distributed Computing",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
numpy = [
    "numpy>=1.24.0",
]
visualization = [
    "matplotlib>=3.7.0",
    "numpy>=1.24.0",
]
dev = [
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]
all = [
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pytest>=7.3.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.urls]
Homepage = "https://github.com/WhiteMetagross/BetaPool"
Documentation = "https://github.com/WhiteMetagross/BetaPool#readme"
Repository = "https://github.com/WhiteMetagross/BetaPool.git"
Issues = "https://github.com/WhiteMetagross/BetaPool/issues"
Paper = "https://arxiv.org/abs/2601.10582"

[tool.setuptools]
packages = ["betapool"]
package-dir = {"" = "."}

[tool.setuptools.package-data]
betapool = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
